# cxxheaderparser

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE.md  LICENSE.txt  README.md  _index.py  index.html  mypy.ini  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug-report.yml  parser-error.yml
.github/workflows/: deploy.yml  dist.yml
cxxheaderparser/: __init__.py  dump.py  errors.py  gentest.py  lexer.py  options.py  parser.py  parserstate.py  preprocessor.py  simple.py  tokfmt.py  types.py  version.py  visitor.py
cxxheaderparser/_ply/: lex.py
docs/: conf.py  custom.rst  index.rst  requirements.txt  simple.rst  tools.rst  types.rst
tests/: README.md  test_abv_template.py  test_attributes.py  test_class.py  test_class_base.py  test_class_bitfields.py  test_concepts.py  test_digraphs.py  test_doxygen.py  test_enum.py  test_fn.py  test_friends.py  test_lineno.py  test_misc.py  test_msvc_types.py  test_namespaces.py  test_operators.py  test_parse_typename.py  test_parserstate.py  test_preprocessor.py  test_skip.py  test_template.py  test_tokfmt.py  test_typedef.py  test_typefmt.py  test_union.py  test_using.py  test_var.py
